# repomind

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  ITERATION2.md  ITERATIONS.md  Leanstack.md  Makefile  PRD.md  README.md  TASKS.md  TASKS_ITERATION2.md  leanstack.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
repomind/: __init__.py  db.py  extractor.py  indexer.py  mcp_server.py  models.py  queries.py  refresh.py  repo.py  scoring.py  walker.py
src/: index.ts  repo-index.ts
tests/: test_db_paths.py  test_e2e.py  test_e2e_i2.py  test_extractor.py  test_fts_retrieval.py  test_fts_schema.py  test_get_critical_files.py  test_get_directory_map.py  test_get_edit_suggestions.py  test_get_index_status.py  test_get_recent_changes.py  test_get_repo_overview.py  test_git_metadata.py  test_import_scoring.py  test_import_tokens.py  test_index_status_trust.py  test_mcp_server.py  test_partial_caps.py  test_placeholder.py  test_reason_strings.py  test_refresh.py  test_repo_root.py  test_run_refresh_index.py  test_schema.py  test_scoring.py  test_walker.py
